# alignment

./: 0_process_audio.py  1_index_to_tsv_cut_audio_v1.py  1_index_to_tsv_cut_audio_v2.py  3_transcripts_to_tsv.py  6_align_srt_w_index_tsv_embs.py  6_align_srt_w_index_tsv_v1.py  6_align_srt_w_index_tsv_v3.py  AGENTS.md  CutAudio.py  CutAudioV2.py  Launch_whisperX_colab.ipynb  README.md  cut_audio_timestamps.py  ff_tutor.1.ipynb  ff_tutor.1.md  pyproject.toml
alignment/: __init__.py  align.py  audio.py  cli.py  embeddings.py  export.py  index_parser.py  io.py  join.py  mapping.py  reorder.py  srt.py  transcript_parser.py  wer.py
asr/: README_asr_scripts.md  asr_common.py  evaluate_corpus.py  run_gigaam_asr.py  run_mms_asr.py  run_whisper_asr.py  run_xlsr_asr.py
data/index_plaintext/: pez_001.txt
data/index_tsv_w_transcript/: pez_001.tsv
data/transcript_plaintext/: pez_001.txt
legacy/: 4_add_transcripts_to_index_tsv.py  5_reorder_index_tsv.py  6_align_srt_w_index_tsv_v2.py
notebooks/: ff_colab_tutor.1.ipynb
tests/: conftest.py  test_align.py  test_align_export.py  test_asr_common.py  test_asr_evaluate_corpus.py  test_cli_smoke.py  test_embeddings.py  test_export.py  test_gigaam_asr.py  test_hf_e2e.py  test_index_parser.py  test_join.py  test_join_reorder.py  test_mapping.py  test_parsers.py  test_reorder.py  test_retro_correct_manual_from_asr.py  test_rewrite_prediction_references.py  test_srt.py  test_transcript_parser.py  test_wer.py  test_xlsr_asr.py
tools/: retro_correct_manual_from_asr.py  rewrite_prediction_paths.py  rewrite_prediction_references.py
(+39 files in other folders)
